--- a/app/src/main/res/layout/fragment_detailed_currency_rate.xml
+++ b/app/src/main/res/layout/fragment_detailed_currency_rate.xml
@@ -1,7 +1,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ScrollView01"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:layout_marginTop="@dimen/activity_vertical_margin">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -9,7 +10,7 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:paddingTop="5dp">
 
         <TextView
             android:id="@+id/textView"
@@ -72,6 +73,17 @@
             android:layout_alignParentStart="true"
             android:layout_marginTop="120dp"
             android:text="BUY_NB"/>
+
+        <Button
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:text="Back"
+            android:drawableLeft="@drawable/left_arrow"
+            android:id="@+id/backToMainActivity"
+            android:layout_below="@+id/textView5"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="20dp"/>
 
     </RelativeLayout>
 
