--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,7 +13,7 @@
     <item android:id="@+id/info_main" android:icon="@drawable/bar_info_icon" android:title="Information">
         <menu>
             <item android:id="@+id/info"
-                android:title="It's a Demo application" />
+                android:title="App code on GitHub" />
         </menu>
     </item>
 
